--- a/app/package.json
+++ b/app/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "Listen1",
-  "version": "1.8.0",
-  "description": "One for all free music in China",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron main.js",
-    "build": "electron-packager . listen1 --all --name='Listen1' --version='1.6.1'"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/listen1/listen1_desktop.git"
-  },
-  "keywords": [
-    "Electron",
-    "Listen 1",
-    "music player"
-  ],
-  "author": "Listen 1 <githublisten1@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/listen1/listen1_desktop/issues"
-  },
-  "homepage": "https://github.com/listen1/listen1_desktop#readme"
+    "name": "Listen1",
+    "version": "1.8.1",
+    "description": "One for all free music in China",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron main.js",
+        "build": "electron-packager . listen1 --all --name='Listen1' --version='1.6.1'"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/listen1/listen1_desktop.git"
+    },
+    "dependencies": {
+        "windows10-fluently-vibrancy": "^0.9.2"
+    },
+    "keywords": [
+        "Electron",
+        "Listen 1",
+        "music player"
+    ],
+    "author": "Listen 1 <githublisten1@gmail.com>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/listen1/listen1_desktop/issues"
+    },
+    "homepage": "https://github.com/listen1/listen1_desktop#readme"
 }
