--- a/package.json
+++ b/package.json
@@ -76,10 +76,12 @@
     }
   },
   "devDependencies": {
-    "electron": "^1.8.1",
-    "electron-builder": "^19.56.2"
+    "electron": "^3.0.8",
+    "electron-builder": "^19.56.2",
+    "electron-rebuild": "^1.8.2"
   },
   "dependencies": {
-    "electron-debug": "^1.5.0"
+    "electron-debug": "^1.5.0",
+    "windows10-fluently-vibrancy": "^0.9.2"
   }
 }
