--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Listen1",
-    "version": "1.9.0",
+    "version": "2.1.0",
     "description": "One for all free music in China",
     "main": "main.js",
     "scripts": {
@@ -10,9 +10,6 @@
     "repository": {
         "type": "git",
         "url": "git+https://github.com/listen1/listen1_desktop.git"
-    },
-    "dependencies": {
-        "windows10-fluently-vibrancy": "^0.9.2"
     },
     "keywords": [
         "Electron",
@@ -24,5 +21,8 @@
     "bugs": {
         "url": "https://github.com/listen1/listen1_desktop/issues"
     },
-    "homepage": "https://github.com/listen1/listen1_desktop#readme"
+    "homepage": "https://github.com/listen1/listen1_desktop#readme",
+    "dependencies": {
+        "windows10-fluently-vibrancy": "^0.9.2"
+    }
 }
