--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,6 @@
     },
     "homepage": "https://github.com/listen1/listen1_desktop#readme",
     "dependencies": {
-        "windows10-fluently-vibrancy": "^0.9.2"
+        "ewc": "^0.0.1"
     }
 }
