--- a/app/listen1_chrome_extension/manifest_firefox.json
+++ b/app/listen1_chrome_extension/manifest_firefox.json
@@ -6,11 +6,7 @@
         }
     },
     "background": {
-        "scripts": [
-            "js/vendor/jquery-3.3.1.min.js",
-            "js/github_api.js",
-            "js/background.js"
-        ]
+        "scripts": ["js/vendor/jquery-3.3.1.min.js", "js/github_api.js","js/background.js" ]
     },
     "browser_action": {
         "default_icon": "images/logo.png",
@@ -24,28 +20,9 @@
     },
     "manifest_version": 2,
     "name": "Listen 1",
-    "permissions": [
-        "notifications",
-        "unlimitedStorage",
-        "downloads",
-        "storage",
-        "contextMenus",
-        "tabs",
-        "cookies",
-        "*://music.163.com/*",
-        "*://*.xiami.com/*",
-        "*://*.qq.com/*",
-        "*://*.kugou.com/",
-        "*://*.kuwo.cn/",
-        "*://*.bilibili.com/*",
-        "*://api.github.com/*",
-        "*://github.com/*",
-        "*://gist.githubusercontent.com/*",
-        "webRequest",
-        "webRequestBlocking"
-    ],
-    "version": "2.2.0",
-    "web_accessible_resources": ["images/*"],
+    "permissions": [ "notifications", "unlimitedStorage", "downloads", "storage", "contextMenus", "tabs", "cookies", "*://music.163.com/*", "*://*.xiami.com/*", "*://*.qq.com/*", "*://*.kugou.com/", "*://*.kuwo.cn/", "*://*.bilibili.com/*",  "*://*.migu.cn/*", "*://api.github.com/*", "*://github.com/*", "*://gist.githubusercontent.com/*", "webRequest", "webRequestBlocking"],
+    "version": "2.3.1",
+    "web_accessible_resources": [ "images/*" ],
     "content_scripts": [{
         "matches": ["https://listen1.github.io/listen1/*"],
         "js": ["js/oauth_callback.js"]
