--- a/package.json
+++ b/package.json
@@ -75,11 +75,11 @@
         }
     },
     "devDependencies": {
-        "electron": "^4.0.5",
+        "electron": "^4.2.5",
         "electron-builder": "^20.38.3"
     },
     "dependencies": {
         "electron-debug": "^1.5.0",
-        "ewc": "^0.0.1"
+        "ewc": "0.0.1"
     }
 }
