--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - npm i -g electron@4.0.6 electron-builder@20.39.0
 cache: npm
 script:
-    - ./node_modules/.bin/electron-builder --win --x64
+    - electron-builder --win --x64
