--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,18 @@ node_js:
   - "8"
 before_install:
   - npm i -g electron@4.0.6 electron-builder@20.39.0
-cache: npm
+cache:
+  directories:
+    - node_modules
+    - app/node_modules
+    - $HOME/.cache/electron
+    - $HOME/.cache/electron-builder
+    - $HOME/.npm/_prebuilds
+
+env:
+  global:
+    - ELECTRON_CACHE=$HOME/.cache/electron
+    - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+    
 script:
-    - electron-builder --win --x64
+    - npm run dist:win64
