--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Listen1",
-    "version": "2.4.0",
+    "version": "2.5.2",
     "description": "One for all free music in China",
     "main": "app/main.js",
     "scripts": {
@@ -75,11 +75,11 @@
         }
     },
     "devDependencies": {
-        "electron": "^4.0.6",
-        "electron-builder": "^20.39.0"
+        "electron": "^4.0.5",
+        "electron-builder": "^20.39.0",
+        "electron-debug": "^1.5.0"
     },
     "dependencies": {
-        "electron-debug": "^1.5.0",
         "ewc": "0.0.1"
     }
 }
