--- a/package.json
+++ b/package.json
@@ -1,85 +1,86 @@
 {
-    "name": "Listen1",
-    "version": "2.5.2",
-    "description": "One for all free music in China",
-    "main": "app/main.js",
-    "scripts": {
-        "postinstall": "install-app-deps",
-        "start": "electron ./app --enable-logging",
-        "dev": "NODE_ENV='development' npm run start",
-        "dist:mac": "CSC_IDENTITY_AUTO_DISCOVERY=false DEBUG=electron-builder electron-builder --platform darwin",
-        "dist": "electron-builder .",
-        "dist:linux": "./node_modules/.bin/electron-builder --linux --ia32 --x64",
-        "dist:linux32": "./node_modules/.bin/electron-builder --linux --ia32",
-        "dist:linux64": "./node_modules/.bin/electron-builder --linux --x64",
-        "dist:win": "./node_modules/.bin/electron-builder --win --ia32 --x64",
-        "dist:win32": "./node_modules/.bin/electron-builder --win --ia32",
-        "dist:win64": "./node_modules/.bin/electron-builder --win --x64"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/listen1/listen1_desktop.git"
-    },
-    "keywords": [
-        "Electron",
-        "Listen 1"
-    ],
-    "author": "Listen 1 <githublisten1@gmail.com>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/listen1/listen1_desktop/issues"
-    },
-    "homepage": "https://github.com/listen1/listen1_desktop#readme",
-    "build": {
-        "appId": "com.listen1.listen1",
-        "productName": "Listen1",
-        "asar": true,
-        "artifactName": "${name}_${version}_${os}_${arch}.${ext}",
-        "dmg": {
-            "title": "Listen 1",
-            "icon": "build/disk.icns",
-            "background": "build/background.png",
-            "iconSize": 80,
-            "contents": [{
-                    "x": 192,
-                    "y": 344
-                },
-                {
-                    "x": 448,
-                    "y": 344,
-                    "type": "link",
-                    "path": "/Applications"
-                }
-            ]
+  "name": "listen1",
+  "version": "2.17.1",
+  "description": "One for all free music in China",
+  "main": "app/main.js",
+  "scripts": {
+    "postinstall": "install-app-deps",
+    "start": "electron ./app --enable-logging",
+    "dev": "NODE_ENV='development' npm run start",
+    "dist:mac": "CSC_IDENTITY_AUTO_DISCOVERY=false DEBUG=electron-builder electron-builder --mac",
+    "dist": "electron-builder .",
+    "dist:linux": "./node_modules/.bin/electron-builder --linux --ia32 --x64",
+    "dist:linux32": "./node_modules/.bin/electron-builder --linux --ia32",
+    "dist:linux64": "./node_modules/.bin/electron-builder --linux --x64",
+    "dist:win": "./node_modules/.bin/electron-builder --win --ia32 --x64",
+    "dist:win32": "./node_modules/.bin/electron-builder --win --ia32",
+    "dist:win64": "./node_modules/.bin/electron-builder --win --x64"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/listen1/listen1_desktop.git"
+  },
+  "keywords": [
+    "Electron",
+    "Listen 1"
+  ],
+  "author": "Listen 1 <githublisten1@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/listen1/listen1_desktop/issues"
+  },
+  "homepage": "https://github.com/listen1/listen1_desktop#readme",
+  "build": {
+    "appId": "com.listen1.listen1",
+    "productName": "Listen1",
+    "asar": true,
+    "artifactName": "${name}_${version}_${os}_${arch}.${ext}",
+    "dmg": {
+      "title": "Listen 1",
+      "icon": "build/disk.icns",
+      "background": "build/background.png",
+      "iconSize": 80,
+      "contents": [
+        {
+          "x": 192,
+          "y": 344
         },
-        "linux": {
-            "target": [
-                "tar.gz",
-                "appImage",
-                "deb"
-            ]
-        },
-        "nsis": {
-            "runAfterFinish": false,
-            "deleteAppDataOnUninstall": true,
-            "allowToChangeInstallationDirectory": true,
-            "oneClick": false,
-            "installerLanguages": "zh_CN",
-            "language": 2052,
-            "perMachine": true,
-            "createDesktopShortcut": true
-        },
-        "win": {
-            "target": "nsis",
-            "icon": "build/icon.ico"
+        {
+          "x": 448,
+          "y": 344,
+          "type": "link",
+          "path": "/Applications"
         }
+      ]
     },
-    "devDependencies": {
-        "electron": "^4.0.5",
-        "electron-builder": "^20.39.0",
-        "electron-debug": "^1.5.0"
+    "linux": {
+      "target": [
+        "tar.gz",
+        "appImage",
+        "deb"
+      ]
     },
-    "dependencies": {
-        "ewc": "0.0.1"
+    "nsis": {
+      "runAfterFinish": true,
+      "deleteAppDataOnUninstall": true,
+      "allowToChangeInstallationDirectory": true,
+      "oneClick": false,
+      "installerLanguages": "zh_CN",
+      "language": 2052,
+      "perMachine": true,
+      "createDesktopShortcut": true
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico"
     }
+  },
+  "devDependencies": {
+    "electron": "^8.2.3",
+    "electron-builder": "^22.5.1",
+    "electron-debug": "^1.5.0"
+  },
+  "dependencies": {
+    "ewc": "^0.0.1"
+  }
 }
